# opstools-gate

./: .travis.yml  README.md  ansible.cfg  cleanup.yml  playbook.yml  setup.cfg  site.yml  test.yml  tox.ini
inventory/: hosts
roles/am_target/files/: api.json
roles/am_target/tasks/: main.yml
roles/log_target/tasks/: main.yml
roles/pm_target/files/: cvs.conf
roles/pm_target/handlers/: main.yml
roles/pm_target/tasks/: main.yml
roles/provision/tasks/: main.yml
roles/repo/tasks/: main.yml
roles/unprovision/tasks/: main.yml
