[metadata]
name = opstools-gate
summary = opstools-gate - ansible playbooks for testing CentOS opstools
description-file =
    README.md
author = Matthias Runge
home-page = https://github.com/mrunge/opstools-gate
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/opstools-gate/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
